fixed bug and layout, add one more feature which allows user to check if there is any conflict in one day, meaning have one employee working two or more shifts in one day

--- a/style.css
+++ b/style.css
@@ -27,3 +27,7 @@ table td {
 ul {
     list-style-type: none;
 }
+
+.conflicts{
+    color: red;
+}
